# HytaleModdingBot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  database.py  logging_configuration.py  main.py  pyproject.toml  utils.py
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
cogs/: auto-thread.py  automod.py  gh-issues.py  keywords.py  languages.py  mod.py  statistics.py  tags.py  tickets.py  utils.py  voting.py
config/: __init__.py  config.py  env_var_loader.py  loader.py  model.py
database/: __init__.py  database.py  migration.py
database/migrations/: 001_initial_tables.py  002_upvotes_table.py  003_thread_followers.py  004_tickets_system.py  005_server_stats.py  006_upvotes_migration.py  __init__.py
settings/: __init__.py  env_var_loader.py  settings.py
utils/: typing_utils.py
