[project]
name = "hytale-modding"
version = "1.0.0"
description = "This bot is used for utility and moderation features for the Hytale Modding Discord."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "better-profanity>=0.7.0",
    "chat-exporter>=2.8.4",
    "discord-py>=2.6.4",
    "python-dotenv>=1.2.1",
]
